public/css/main.css
body {
    height: calc(100vh - 65px);
    width: 100vw;
}

body > nav .dropdown-menu {
    left: -37px;
}

body > .container {
    margin-top: 65px;
    height: calc(100vh - 101px);
}

.home > .row {
    padding-top: 50px;
}

section.home img {
    margin-top: 50px;
}

.myprofile {
    padding-top: 25px;
}

#profile-form {
    margin-top: 15px;
}

.card-img-top {
    width: 100%;
    height: 15vw;
    object-fit: cover;
}
.mini-footer {
 background:#192027;
 text-align:center;
 padding:32px 0
}
.mini-footer p {
 margin:0;
 line-height:26px;
 font-size:15px;
 color:#999
}
.mini-footer p a {
 color:#5867dd
}
.mini-footer p a:hover {
 color:#34bfa3
}

